# jankboard-2

./: .gitattributes  .gitignore  LICENSE  README.md  SECURITY.md  flake.nix  package-lock.json  pyproject.toml
.github/workflows/: build-nix.yml  main.yml  publish-all.yml
app/: server.py
app/static/external-apps/: README.md
app/static/songs/deja-vu/: audio.m4a
app/static/songs/xenogenesis/: audio.m4a
client/: default.nix  index.html  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.js  stats.html  svelte.config.js  vite.config.ts
client/public/: index.html  splashscreen.html
client/public/static/voices/en-RU/: TODO.md
client/src/: App.svelte  app.css  globals.d.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: close_splashscreen.rs  main.rs  telemetry.rs
client/src-tauri/src/telemetry/: check_triggers.rs  create_client.rs  create_subscription.rs  mod.rs
client/src/lib/Apps/: AppBar.svelte  AppContainer.svelte  appList.ts
client/src/lib/Apps/Camera/: Camera.svelte  CameraContainer.svelte
client/src/lib/Apps/DevTools/: DevTools.svelte  simulateMotion.ts  telemetrySimulators.ts
client/src/lib/Apps/GBAEmulator/: GBAEmulator.svelte
client/src/lib/Apps/JSDoom/: JSDoom.svelte
client/src/lib/Apps/MusicBrowser/: MusicBrowser.svelte  Song.svelte
client/src/lib/Apps/MusicPlayer/: MusicBrowser.svelte  Song.svelte  songList.ts
client/src/lib/Apps/Settings/: Settings.svelte  SettingsInput.svelte  SettingsSelector.svelte  SettingsToggle.svelte  Switch.svelte
client/src/lib/Dashboard/: Bottom.svelte  Compass.svelte  Dashboard.svelte  SpeedLimit.svelte  Speedometer.svelte
client/src/lib/Loading/: Loading.svelte  SvelteLogo.svelte  customTransitions.ts
client/src/lib/Notifications/: InfoIcon.svelte  WarnIcon.svelte  notifications.ts
client/src/lib/Sequences/: sequences.ts
client/src/lib/stores/: audioManager.ts  musicStore.ts  sequenceStore.ts  settingsStore.ts  telemetryStore.ts
client/src/lib/utils/: getSettings.ts  getVoicePath.ts  helpers.ts  hideSplashscreen.ts  initializeTelemetry.ts  unitConversions.ts
splash-screen/: README.md  default.nix  index.html  package.json  pnpm-lock.yaml
splash-screen/src/: App.svelte  app.css
splash-screen/src/lib/: Loading.svelte  SvelteLogo.svelte
(+24 files in other folders)
