[tool.poetry]
name = "jankboard-2"
version = "0.1.0"
description = ""
authors = ["Youwen Wu <youwenw@gmail.com>"]
license = "GNU GPL 3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.2"
flask-socketio = "^5.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
