[package]
name = "jankboard"
version = "0.1.0"
description = "A robot control dashboard, purpose-built for Team 1280's robot competing in the 2024 FIRST Robotics Competition."
authors = ["you"]
license = "GPL-3.0"
repository = "https://github.com/youwen5/jankboard"
default-run = "jankboard"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.0", features = [] }
tokio = { version = "1.23.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
network-tables = { version = "=0.1.3", features = ["client-v4"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
